@@ -7,6 +7,7 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -19,53 +20,17 @@ import java.util.stream.Collectors;
 @AllArgsConstructor
 public class PostDto {
 
-    /**
-     * 게시물 ID
-     */
-    private Long id;
-
-    /**
-     * 게시물 제목
-     */
+    private Long id; // Long 타입으로 유지
     private String title;
-
-    /**
-     * 여행 시작 날짜
-     */
     private String startDate;
-
-    /**
-     * 여행 종료 날짜
-     */
     private String endDate;
-
-    /**
-     * 여행지 위치
-     */
     private String location;
-
-    /**
-     * 여행 동반자 정보
-     */
     private String companion;
-
-    /**
-     * 게시물의 병 정보
-     */
     private String bottle;
-
-    /**
-     * 게시물에 연결된 스토리 ID 목록
-     */
     private List<Long> storyIds;
 
-    /**
-     * Entity(Post)를 DTO(PostDto)로 변환하는 생성자
-     *
-     * @param post Post 엔티티 객체
-     */
     public PostDto(Post post) {
-        this.id = post.getId();
+        this.id = post.getId(); // Long 타입 유지
         this.title = post.getTitle();
         this.startDate = post.getStartDate();
         this.endDate = post.getEndDate();
@@ -76,6 +41,6 @@ public class PostDto {
                 ? post.getStories().stream()
                 .map(Story::getId)
                 .collect(Collectors.toList())
-                : List.of();
+                : Collections.emptyList();
     }
 }
